Fixing a styling issue on Changelogs
A short changelog would expose and overlapping background.

--- a/scss/style.scss
+++ b/scss/style.scss
@@ -929,6 +929,7 @@ textarea.form-control.is-invalid.ld-warning {
 }
 
 .changelog {
+    height: 100vh;
     h1,h2 {
         padding-bottom: 0.75rem;
         margin-bottom: 1.25rem;
